panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__initialisation__struct__test_braced_init_of_register_sized_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/initialisation/struct/test_braced_init_of_register_sized_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/struct/test_braced_init_of_register_sized_struct.c"
   (declaration external (memcmp~0 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int` (static memcmp)) ∅)
   (struct T~1
      (member c1 @0 `char`)
      (member c2 @1 `char`))
   (function-definition external stack-size=56
      (main~2 `fn() -> int` (static main))
      (compound-statement
         (struct T~1
            (member c1 @0 `char`)
            (member c2 @1 `char`))
         (definition (t~3 `struct T~1 complete` @0)
            (braced
               (subobject +0 (truncate `char` @0 (97 `int` @4)))))
         (definition (bytes~4 `array<char; 2>` @2)
            (braced
               (subobject +0 (truncate `char` @2 (97 `int` @4)))))
         (return
            (call `int` @4
               (addressof `ptr<fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int>` @8
                  (memcmp~0 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int` (static memcmp)))
               (noop-type-conversion `ptr<void const>` @16
                  (addressof `ptr<struct T~1 complete>` @16
                     (t~3 `struct T~1 complete` @0)))
               (noop-type-conversion `ptr<void const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 2>>` @24
                        (bytes~4 `array<char; 2>` @2))))
               (2 `unsigned long` @32))))))

----- stderr -----
